# AppUpdater

./: .gitignore  CHANGELOG.md  pyproject.toml
app_updater/: __init__.py  __main__.py  check_for_update.py  frontend.ui  pyqt_widget.py  pyside_widget.py  update_checker_widget.py
