[tool.poetry]
name = "app-updater"
version = "0.1.1"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
httpx = "^0.27.2"
qasync = "^0.27.1"
loguru = "^0.7.2"


[tool.poetry.group.ui.dependencies]
pyqt6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
