[project]
name = "app-updater"
version = "0.1.2"
description = ""
license = "MIT"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "packaging>=25.0",
    "qasync>=0.27.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
pyqt = [
    "pyqt6>=6.9.1",
]
pyside = [
    "pyside6>=6.9.0",
]
